--- a/p4.ipynb
+++ b/p4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "6faa433a",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "50980aab",
    "metadata": {},
    "outputs": [
@@ -75,6 +75,422 @@
     "\n",
     "for i, r in enumerate(raices, 1):\n",
     "    print(f\"x{i} =\", r)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42065265",
+   "metadata": {},
+   "source": [
+    "# p5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73a61af4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def der_parcial_0(xs: list, ys: list) -> tuple[float, float, float]:\n",
+    "    \"\"\"\n",
+    "    (Σ x^2) * a1 + (Σ x) * a0 = (Σ x*y)\n",
+    "    Devuelve: (c1, c0, c_ind)\n",
+    "    \"\"\"\n",
+    "    c1 = 0.0      # Σ x^2\n",
+    "    c0 = 0.0      # Σ x\n",
+    "    c_ind = 0.0   # Σ x*y\n",
+    "\n",
+    "    for xi, yi in zip(xs, ys):\n",
+    "        c1 += xi * xi\n",
+    "        c0 += xi\n",
+    "        c_ind += xi * yi\n",
+    "\n",
+    "    return (c1, c0, c_ind)\n",
+    "\n",
+    "\n",
+    "def der_parcial_1(xs: list, ys: list) -> tuple[float, float, float]:\n",
+    "    \"\"\"\n",
+    "    (Σ x) * a1 + (n) * a0 = (Σ y)\n",
+    "    Devuelve: (c1, c0, c_ind)\n",
+    "    \"\"\"\n",
+    "    c1 = float(sum(xs))       # Σ x\n",
+    "    c0 = float(len(xs))       # n\n",
+    "    c_ind = float(sum(ys))    # Σ y\n",
+    "\n",
+    "    return (c1, c0, c_ind)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c431371",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src import ajustar_min_cuadrados\n",
+    "import numpy as np\n",
+    "\n",
+    "datos = [(4.1,5.4), (3.6,5.4), (3.3,5.3), (0.2,5.0), (9.8,6.1),\n",
+    "         (9.5,6.0), (3.2,5.3), (5.8,5.5), (0.7,5.2), (4.2,5.4),\n",
+    "         (5.4,5.7), (6.3,5.7), (0.3,5.1), (1.0,5.3), (9.3,5.7),\n",
+    "         (2.4,5.2), (4.7,5.5), (8.8,6.0), (5.2,5.5), (5.6,5.7),\n",
+    "         (4.8,5.5), (9.7,6.1), (7.5,5.9), (0.7,5.1), (8.2,5.9),\n",
+    "         (0.6,5.0), (2.3,5.3), (8.4,5.6), (0.4,5.1), (1.6,5.1),\n",
+    "         (1.5,5.1), (9.6,6.0), (6.6,5.5), (0.9,5.0), (8.2,6.1),\n",
+    "         (5.5,5.5), (9.4,5.9), (4.3,5.4), (6.4,5.6), (3.3,5.5),\n",
+    "         (2.8,5.3), (3.3,5.2), (0.9,5.3), (5.8,5.7), (4.3,5.5),\n",
+    "         (1.0,5.1), (5.4,5.5), (8.0,5.9), (8.6,5.8), (4.0,5.4),\n",
+    "         (8.9,5.8), (3.0,5.4), (9.2,5.9), (3.3,5.3), (8.9,5.9),\n",
+    "         (2.3,5.1), (1.9,5.1), (3.5,5.5), (4.3,5.4), (5.8,5.5),\n",
+    "         (8.9,5.9), (0.7,5.1), (5.8,5.6), (6.2,5.7), (2.4,5.3),\n",
+    "         (1.5,5.1), (0.2,5.1), (3.1,5.3), (6.2,5.6), (4.5,5.4),\n",
+    "         (3.1,5.3), (1.3,5.1), (2.0,5.3) , (0.4,5.1),\n",
+    "         (5.4,5.5), (4.6,5.6), (0.6,4.9), (1.6,5.2), (1.9,5.2),\n",
+    "         (2.2,5.4), (6.4,5.5), (1.1,5.0), (7.9,5.8), (8.1,5.6),\n",
+    "         (3.8,5.3), (1.1,4.9), (3.0,5.4), (5.6,5.6), (5.4,5.5),\n",
+    "         (0.3,5.1), (8.3,6.1), (8.5,5.8), (5.3,5.6), (1.5,5.1),\n",
+    "         (0.9,5.1), (2.7,5.3), (3.0,5.3), (8.0,5.7), (2.0,5.2),\n",
+    "         (9.4,6.0)]\n",
+    "\n",
+    "xs = [x for x, y in datos]\n",
+    "ys = [y for x, y in datos]\n",
+    "\n",
+    "# “gradiente” = lista de ecuaciones normales (tus derivadas parciales)\n",
+    "a1, a0 = ajustar_min_cuadrados(xs, ys, [der_parcial_0, der_parcial_1])\n",
+    "\n",
+    "print(\"a1 =\", a1)\n",
+    "print(\"a0 =\", a0)\n",
+    "\n",
+    "f = lambda x: a1*x + a0\n",
+    "\n",
+    "\n",
+    "xs_np = np.array(xs, dtype=float)\n",
+    "ys_np = np.array(ys, dtype=float)\n",
+    "\n",
+    "y_hat = f(xs_np)\n",
+    "\n",
+    "# Evitar división por cero por si algún yi = 0\n",
+    "eps = 1e-12\n",
+    "den = np.where(np.abs(ys_np) < eps, eps, ys_np)\n",
+    "\n",
+    "err_rel = np.abs((ys_np - y_hat) / den)\n",
+    "\n",
+    "print(\"Error relativo promedio:\", float(np.mean(err_rel)))\n",
+    "print(\"Error relativo máximo:  \", float(np.max(err_rel)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66a3c1b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xg = np.linspace(min(xs_np), max(xs_np), 300)\n",
+    "yg = f(xg)\n",
+    "\n",
+    "plt.figure(figsize=(9, 6))\n",
+    "plt.scatter(xs_np, ys_np, label=\"Datos\")\n",
+    "plt.plot(xg, yg, label=f\"Ajuste: y = {a1:.6f}x + {a0:.6f}\")\n",
+    "plt.grid(True)\n",
+    "plt.xlabel(\"x\")\n",
+    "plt.ylabel(\"y\")\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94959485",
+   "metadata": {},
+   "source": [
+    "# P6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0f950a68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coeficientes:\n",
+      "S0: a0,b0,c0,d0 = 1.0 16.0 -18.0 6.0\n",
+      "S1: a1,b1,c1,d1 = 5.0 -2.0 0.0 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "x0, y0 = -1.0, 1.0\n",
+    "x1, y1 =  0.0, 5.0\n",
+    "x2, y2 =  1.0, 3.0\n",
+    "m = -2.0  \n",
+    "\n",
+    "\n",
+    "def row_S0(x):\n",
+    "    t = x - x0\n",
+    "    return np.array([1, t, t**2, t**3, 0, 0, 0, 0], dtype=float)\n",
+    "\n",
+    "def row_S1(x):\n",
+    "    u = x - x1\n",
+    "    return np.array([0, 0, 0, 0, 1, u, u**2, u**3], dtype=float)\n",
+    "\n",
+    "def row_S0p(x):\n",
+    "    t = x - x0\n",
+    "    return np.array([0, 1, 2*t, 3*t**2, 0, 0, 0, 0], dtype=float)\n",
+    "\n",
+    "def row_S1p(x):\n",
+    "    u = x - x1\n",
+    "    return np.array([0, 0, 0, 0, 0, 1, 2*u, 3*u**2], dtype=float)\n",
+    "\n",
+    "def row_S0pp(x):\n",
+    "    t = x - x0\n",
+    "    return np.array([0, 0, 2, 6*t, 0, 0, 0, 0], dtype=float)\n",
+    "\n",
+    "def row_S1pp(x):\n",
+    "    u = x - x1\n",
+    "    return np.array([0, 0, 0, 0, 0, 0, 2, 6*u], dtype=float)\n",
+    "\n",
+    "A = []\n",
+    "b = []\n",
+    "\n",
+    "# Interpolación\n",
+    "A.append(row_S0(x0)); b.append(y0)\n",
+    "A.append(row_S0(x1)); b.append(y1)\n",
+    "A.append(row_S1(x1)); b.append(y1)\n",
+    "A.append(row_S1(x2)); b.append(y2)\n",
+    "\n",
+    "# Continuidad de 2da derivada en x1: S0''(x1) - S1''(x1) = 0\n",
+    "A.append(row_S0pp(x1) - row_S1pp(x1)); b.append(0.0)\n",
+    "\n",
+    "# Pendiente única en x1\n",
+    "A.append(row_S0p(x1)); b.append(m)\n",
+    "A.append(row_S1p(x1)); b.append(m)\n",
+    "\n",
+    "# Natural derecha (cierra sistema)\n",
+    "A.append(row_S1pp(x2)); b.append(0.0)\n",
+    "\n",
+    "A = np.vstack(A)\n",
+    "b = np.array(b, dtype=float)\n",
+    "\n",
+    "coef = np.linalg.solve(A, b)\n",
+    "a0, b0, c0, d0, a1, b1, c1, d1 = coef\n",
+    "\n",
+    "print(\"Coeficientes:\")\n",
+    "print(\"S0: a0,b0,c0,d0 =\", a0, b0, c0, d0)\n",
+    "print(\"S1: a1,b1,c1,d1 =\", a1, b1, c1, d1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "67226341",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S0(x) = 1.0*(x--1.0)^3 + 16.0*(x--1.0)^2 + -18.0*(x--1.0) + 6.0\n",
+      "S1(x) = 5.0*(x-0.0)^3 + -2.0*(x-0.0)^2 + 0.0*(x-0.0) + 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def spline_expr(i, a, b, c, d, xi, dec=6):\n",
+    "    \n",
+    "    coeffs = [a, b, c, d]\n",
+    "    if any((isinstance(v, float) and math.isnan(v)) for v in coeffs):\n",
+    "        return f\"S{i}(x) = NaN*(x-{xi})^3 + NaN*(x-{xi})^2 + NaN*(x-{xi}) + NaN\"\n",
+    "\n",
+    "    a = round(float(a), dec)\n",
+    "    b = round(float(b), dec)\n",
+    "    c = round(float(c), dec)\n",
+    "    d = round(float(d), dec)\n",
+    "    xi = round(float(xi), dec)\n",
+    "\n",
+    "    return f\"S{i}(x) = {a}*(x-{xi})^3 + {b}*(x-{xi})^2 + {c}*(x-{xi}) + {d}\"\n",
+    "\n",
+    "print(spline_expr(0, a0, b0, c0, d0, x0))\n",
+    "print(spline_expr(1, a1, b1, c1, d1, x1))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc0fb51e",
+   "metadata": {},
+   "source": [
+    "# P7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "affc37fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from src import gauss_jordan, matriz_aumentada\n",
+    "\n",
+    "def inv_matrix(A):\n",
+    "    \n",
+    "    A = np.array(A, dtype=float)\n",
+    "    \n",
+    "    n = A.shape[0]\n",
+    "    assert n == A.shape[1], \"La matriz debe ser cuadrada\"\n",
+    "\n",
+    "    A_inv = np.zeros((n, n))\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        # vector identidad e_i\n",
+    "        b = np.zeros(n)\n",
+    "        b[i] = 1.0\n",
+    "\n",
+    "        # matriz aumentada [A | b]\n",
+    "        Ab = matriz_aumentada(A.copy(), b)\n",
+    "\n",
+    "        # resolver sistema\n",
+    "        x = gauss_jordan(Ab)\n",
+    "\n",
+    "        # guardar como columna\n",
+    "        A_inv[:, i] = x\n",
+    "\n",
+    "    return A_inv\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "df05027b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[02-18 11:06:57][INFO][PC-PR] Intercambiando filas 0 y 1.\n",
+      "[02-18 11:06:57][INFO][PC-PR] \n",
+      "[[-1.  1.  0.]\n",
+      " [ 0. -1.  1.]]\n",
+      "[02-18 11:06:57][INFO][PC-PR] \n",
+      "[[-1.  0.  1.]\n",
+      " [ 0. -1.  1.]]\n",
+      "[02-18 11:06:57][INFO][PC-PR] Intercambiando filas 0 y 1.\n",
+      "[02-18 11:06:57][INFO][PC-PR] \n",
+      "[[-1.  1.  1.]\n",
+      " [ 0. -1.  2.]]\n",
+      "[02-18 11:06:57][INFO][PC-PR] \n",
+      "[[-1.  0.  3.]\n",
+      " [ 0. -1.  2.]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1., -3.],\n",
+       "       [-1., -2.]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = [[2, -3], [-1, 1]]\n",
+    "inv_matrix(A)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88232950",
+   "metadata": {},
+   "source": [
+    "# P8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ace7d865",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from src import gauss_jacobi, gauss_seidel\n",
+    "\n",
+    "def resolver_sistema_iterativo(A, b, x0=None, tol=1e-5, max_iter=50):\n",
+    "    A = np.array(A, dtype=float)\n",
+    "    b = np.array(b, dtype=float)\n",
+    "\n",
+    "    n = A.shape[0]\n",
+    "    if x0 is None:\n",
+    "        x0 = np.zeros((n, 1))\n",
+    "    else:\n",
+    "        x0 = np.array(x0, dtype=float, ndmin=2).T\n",
+    "\n",
+    "    # pendiente m de la segunda ecuación: a21 x + a22 y = b2 -> y = m x + c\n",
+    "    m = -A[1, 0] / A[1, 1]\n",
+    "\n",
+    "    x_jacobi = gauss_jacobi(A=A, b=b, x=x0.copy(), tol=tol, max_iter=max_iter)\n",
+    "    x_seidel = gauss_seidel(A=A, b=b, x=x0.copy(), tol=tol, max_iter=max_iter)\n",
+    "\n",
+    "    return x_jacobi, x_seidel, m\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cf0dd19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A1 = [[2, 1], [3, 2]]\n",
+    "b1 = [5, 8]\n",
+    "\n",
+    "xj, xs, m = resolver_sistema_iterativo(A1, b1, max_iter=50)\n",
+    "\n",
+    "print(\"Jacobi :\", xj.ravel())\n",
+    "print(\"Seidel :\", xs.ravel())\n",
+    "print(\"m =\", m)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e3ec7b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def residuo(A, b, x):\n",
+    "    A = np.array(A, dtype=float)\n",
+    "    b = np.array(b, dtype=float).reshape(-1, 1)\n",
+    "    return np.linalg.norm(A @ x - b)\n",
+    "\n",
+    "rj = residuo(A1, b1, xj)\n",
+    "rs = residuo(A1, b1, xs)\n",
+    "\n",
+    "print(\"Residuo Jacobi:\", rj)\n",
+    "print(\"Residuo Seidel:\", rs)\n",
+    "\n",
+    "if rs < rj:\n",
+    "    print(\"Mejor método: Gauss-Seidel\")\n",
+    "else:\n",
+    "    print(\"Mejor método: Gauss-Jacobi\")\n"
    ]
   }
  ],
