--- a/p5_interpolacion.ipynb
+++ b/p5_interpolacion.ipynb
@@ -375,6 +375,45 @@
     "print(\"Error relativo promedio:\", e_rel)\n",
     "print(\"Máximo error relativo:\", e_max)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def der_parcial_0_g2(xs, ys):  # ecuación para a2\n",
+    "    c2 = sum(x**4 for x in xs)\n",
+    "    c1 = sum(x**3 for x in xs)\n",
+    "    c0 = sum(x**2 for x in xs)\n",
+    "    c_ind = sum((x**2)*y for x, y in zip(xs, ys))\n",
+    "    return (c2, c1, c0, c_ind)\n",
+    "\n",
+    "def der_parcial_1_g2(xs, ys):  # ecuación para a1\n",
+    "    c2 = sum(x**3 for x in xs)\n",
+    "    c1 = sum(x**2 for x in xs)\n",
+    "    c0 = sum(x for x in xs)\n",
+    "    c_ind = sum(x*y for x, y in zip(xs, ys))\n",
+    "    return (c2, c1, c0, c_ind)\n",
+    "\n",
+    "def der_parcial_2_g2(xs, ys):  # ecuación para a0\n",
+    "    c2 = sum(x**2 for x in xs)\n",
+    "    c1 = sum(x for x in xs)\n",
+    "    c0 = float(len(xs))\n",
+    "    c_ind = sum(ys)\n",
+    "    return (c2, c1, c0, c_ind)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gradiente = [der_parcial_0_g2, der_parcial_1_g2, der_parcial_2_g2]\n",
+    "sol = ajustar_min_cuadrados(xs, ys, gradiente)\n",
+    "# sol debería darte [a2, a1, a0]\n"
+   ]
   }
  ],
  "metadata": {
