--- a/p8_gauss_iterative.ipynb
+++ b/p8_gauss_iterative.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5b82476c",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
     "\n",
     "    fig, ax = plt.subplots(figsize=(10, 7))\n",
     "\n",
-    "    # Línea de trayectoria + puntos (sin flechas)\n",
+    "    # Línea de trayectoria + puntos \n",
     "    ax.plot(pts[:, 0], pts[:, 1], marker=\"o\", linewidth=2, label=\"Trayectoria\")\n",
     "\n",
     "    # Destacar inicio y final\n",
@@ -186,6 +186,195 @@
     "    plt.show()\n",
     "\n",
     "graficar_trayectoria(iteraciones, titulo)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3ff23265",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from src import gauss_jacobi, gauss_seidel\n",
+    "\n",
+    "def resolver_sistema_iterativo(A, b, x0=None, tol=1e-5, max_iter=50):\n",
+    "    A = np.array(A, dtype=float)\n",
+    "    b = np.array(b, dtype=float)\n",
+    "\n",
+    "    n = A.shape[0]\n",
+    "    if x0 is None:\n",
+    "        x0 = np.zeros((n, 1))\n",
+    "    else:\n",
+    "        x0 = np.array(x0, dtype=float, ndmin=2).T\n",
+    "\n",
+    "    # pendiente m de la segunda ecuación: a21 x + a22 y = b2 -> y = m x + c\n",
+    "    m = -A[1, 0] / A[1, 1]\n",
+    "\n",
+    "    x_jacobi = gauss_jacobi(A=A, b=b, x=x0.copy(), tol=tol, max_iter=max_iter)\n",
+    "    x_seidel = gauss_seidel(A=A, b=b, x=x0.copy(), tol=tol, max_iter=max_iter)\n",
+    "\n",
+    "    return x_jacobi, x_seidel, m\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d60c747f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[02-18 10:55:07][INFO][PC-PR] i= 0 x: [[0. 0.]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 50 x: [[1.99849491 0.99924746]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 0 x: [[0. 0.]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 1 x: [[2.5  0.25]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 2 x: [[2.375  0.4375]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 3 x: [[2.28125  0.578125]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 4 x: [[2.2109375  0.68359375]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 5 x: [[2.15820312 0.76269531]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 6 x: [[2.11865234 0.82202148]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 7 x: [[2.08898926 0.86651611]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 8 x: [[2.06674194 0.89988708]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 9 x: [[2.05005646 0.92491531]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 10 x: [[2.03754234 0.94368649]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 11 x: [[2.02815676 0.95776486]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 12 x: [[2.02111757 0.96832365]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 13 x: [[2.01583818 0.97624274]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 14 x: [[2.01187863 0.98218205]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 15 x: [[2.00890897 0.98663654]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 16 x: [[2.00668173 0.9899774 ]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 17 x: [[2.0050113  0.99248305]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 18 x: [[2.00375847 0.99436229]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 19 x: [[2.00281886 0.99577172]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 20 x: [[2.00211414 0.99682879]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 21 x: [[2.00158561 0.99762159]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 22 x: [[2.0011892  0.99821619]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 23 x: [[2.0008919  0.99866214]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 24 x: [[2.00066893 0.99899661]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 25 x: [[2.0005017  0.99924746]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 26 x: [[2.00037627 0.99943559]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 27 x: [[2.0002822  0.99957669]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 28 x: [[2.00021165 0.99968252]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 29 x: [[2.00015874 0.99976189]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 30 x: [[2.00011905 0.99982142]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 31 x: [[2.00008929 0.99986606]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 32 x: [[2.00006697 0.99989955]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 33 x: [[2.00005023 0.99992466]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 34 x: [[2.00003767 0.9999435 ]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 35 x: [[2.00002825 0.99995762]]\n",
+      "[02-18 10:55:07][INFO][PC-PR] i= 36 x: [[2.00002119 0.99996822]]\n",
+      "Jacobi : [1.99849491 0.99924746]\n",
+      "Seidel : [2.00001589 0.99997616]\n",
+      "m = -1.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "A1 = [[2, 1], [3, 2]]\n",
+    "b1 = [5, 8]\n",
+    "\n",
+    "xj, xs, m = resolver_sistema_iterativo(A1, b1, max_iter=50)\n",
+    "\n",
+    "print(\"Jacobi :\", xj.ravel())\n",
+    "print(\"Seidel :\", xs.ravel())\n",
+    "print(\"m =\", m)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "044e5891",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def residuo(A, b, x):\n",
+    "    A = np.array(A, dtype=float)\n",
+    "    b = np.array(b, dtype=float).reshape(-1, 1)\n",
+    "    return np.linalg.norm(A @ x - b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a2fd7aee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Residuo Jacobi: 0.007099480785381242\n",
+      "Residuo Seidel: 7.945943831799696e-06\n",
+      "Mejor método: Gauss-Seidel\n"
+     ]
+    }
+   ],
+   "source": [
+    "rj = residuo(A1, b1, xj)\n",
+    "rs = residuo(A1, b1, xs)\n",
+    "\n",
+    "print(\"Residuo Jacobi:\", rj)\n",
+    "print(\"Residuo Seidel:\", rs)\n",
+    "\n",
+    "if rs < rj:\n",
+    "    print(\"Mejor método: Gauss-Seidel\")\n",
+    "else:\n",
+    "    print(\"Mejor método: Gauss-Jacobi\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9b003480",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[02-18 10:57:05][INFO][PC-PR] i= 0 x: [[0. 0.]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 0 x: [[0. 0.]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 1 x: [[-0.  6.]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 2 x: [[3. 3.]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 3 x: [[1.5 4.5]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 4 x: [[2.25 3.75]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 5 x: [[1.875 4.125]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 6 x: [[2.0625 3.9375]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 7 x: [[1.96875 4.03125]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 8 x: [[2.015625 3.984375]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 9 x: [[1.9921875 4.0078125]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 10 x: [[2.00390625 3.99609375]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 11 x: [[1.99804688 4.00195312]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 12 x: [[2.00097656 3.99902344]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 13 x: [[1.99951172 4.00048828]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 14 x: [[2.00024414 3.99975586]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 15 x: [[1.99987793 4.00012207]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 16 x: [[2.00006104 3.99993896]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 17 x: [[1.99996948 4.00003052]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 18 x: [[2.00001526 3.99998474]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 19 x: [[1.99999237 4.00000763]]\n",
+      "[02-18 10:57:05][INFO][PC-PR] i= 20 x: [[2.00000381 3.99999619]]\n",
+      "Jacobi : [1.99999809 3.99999619]\n",
+      "Seidel : [1.99999809 4.00000191]\n",
+      "m = -1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "A2 = [[1, 1], [-2, 1]]\n",
+    "b2 = [6, 0]\n",
+    "\n",
+    "# reordenar ecuaciones (swap filas)\n",
+    "A2r = [[-2, 1], [1, 1]]\n",
+    "b2r = [0, 6]\n",
+    "\n",
+    "xj2, xs2, m2 = resolver_sistema_iterativo(A2r, b2r, max_iter=50)\n",
+    "print(\"Jacobi :\", xj2.ravel())\n",
+    "print(\"Seidel :\", xs2.ravel())\n",
+    "print(\"m =\", m2)\n"
    ]
   }
  ],
