--- a/p7_mat_inv.ipynb
+++ b/p7_mat_inv.ipynb
@@ -130,6 +130,103 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[02-18 10:45:37][INFO][PC-PR] 2026-02-18 10:45:37.526045\n",
+      "[02-18 10:45:37][INFO][PC-PR] 2026-02-18 10:45:37.529104\n",
+      "[02-18 10:45:37][INFO][PC-PR] 2026-02-18 10:45:37.532014\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from src import gauss_jordan, matriz_aumentada\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inv_matrix(A):\n",
+    "    \"\"\"\n",
+    "    Calcula la inversa de A usando Gauss-Jordan\n",
+    "    resolviendo A x = e_i para cada columna.\n",
+    "    \"\"\"\n",
+    "    A = np.array(A, dtype=float)\n",
+    "    \n",
+    "    n = A.shape[0]\n",
+    "    assert n == A.shape[1], \"La matriz debe ser cuadrada\"\n",
+    "\n",
+    "    A_inv = np.zeros((n, n))\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        # vector identidad e_i\n",
+    "        b = np.zeros(n)\n",
+    "        b[i] = 1.0\n",
+    "\n",
+    "        # matriz aumentada [A | b]\n",
+    "        Ab = matriz_aumentada(A.copy(), b)\n",
+    "\n",
+    "        # resolver sistema\n",
+    "        x = gauss_jordan(Ab)\n",
+    "\n",
+    "        # guardar como columna\n",
+    "        A_inv[:, i] = x\n",
+    "\n",
+    "    return A_inv\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[02-18 10:46:02][INFO][PC-PR] Intercambiando filas 0 y 1.\n",
+      "[02-18 10:46:02][INFO][PC-PR] \n",
+      "[[-1.  1.  0.]\n",
+      " [ 0. -1.  1.]]\n",
+      "[02-18 10:46:02][INFO][PC-PR] \n",
+      "[[-1.  0.  1.]\n",
+      " [ 0. -1.  1.]]\n",
+      "[02-18 10:46:02][INFO][PC-PR] Intercambiando filas 0 y 1.\n",
+      "[02-18 10:46:02][INFO][PC-PR] \n",
+      "[[-1.  1.  1.]\n",
+      " [ 0. -1.  2.]]\n",
+      "[02-18 10:46:02][INFO][PC-PR] \n",
+      "[[-1.  0.  3.]\n",
+      " [ 0. -1.  2.]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1., -3.],\n",
+       "       [-1., -2.]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = [[2, -3], [-1, 1]]\n",
+    "inv_matrix(A)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -303,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
